<resources>
    <string name="app_name">MeccaMovil</string>

    <!-- strings titulos -->
    <string name="titulo_login">Inicio de Sesión</string>
    <string name="titulo_registro">Registrar Cuenta</string>
    <string name="correo_usuario">Correo:</string>
    <string name="pantalla_inicio">Bienvenido:</string>
    <string name="actualizar_contraseña">Actualizar contraseña</string>
    <string name="pantalla_pacientes">Registro de pacientes</string>
    <string name="registro_citas">Registro de citas</string>

    <!-- strings descripcion imagenes -->
    <string name="descripcion_logo">Logo Multiclinicas</string>

    <!-- strings para botones -->
    <string name="btnlogin">Iniciar Sesión</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnActualizarNombre">Actualizar Nombre</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="btnActualizarContraseña">Actualizar</string>

    <!-- Strings campos de texto -->
    <string name="edtcorreo">Correo:</string>
    <string name="edtcontraseña">Contraseña:</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multiclinica</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contraseña_nueva">Nueva contraseña:</string>
    <string name="contraseña_antigua">Antigua contraseña:</string>
    <string name="nombre_paciente">Nombre</string>
    <string name="apellido_paciente">Apellido</string>
    <string name="telefono_paciente">Telefono</string>
    <string name="prescripcion_paciente">Prescripcion medica</string>
    <string name="fecha_cita">Fecha:</string>
    <string name="Recomendaciones_cita">Diagnostico:</string>
    <string name="registrar_cita">Registrar cita</string>
    <string name="seleccione_paciente">Seleccion un paciente</string>
    <string name="nombre_fecha">Citas: Nombre - Fecha</string>


    <!--opciones del menu-->
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Pacientes</string>
    <string name="menu_slideshow">Citas</string>
    <string name="menu_profile">Perfil de Usuario</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

    <!-- strings de fragments -->
    <string name="profile_title">Perfil de Usuario</string>
    <string name="label_usuario">Perfil</string>
    <string name="label_nombre_perfil">Nombre:</string>

    <!-- strings submenus -->
    <string name="submenu_config">Configuraciones</string>
</resources>