<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <!-- seccion de usuario y cerrar sesion -->
    <item android:title="@string/submenu_config">
        <menu>
            <item
                android:id="@+id/usuarioFragment"
                android:icon="@drawable/profile"
                android:title="@string/profile_title"/>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/sign_out"
                android:onClick="Logout"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>
</menu>