<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="186dp"
        android:layout_height="27dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:text="@string/pantalla_pacientes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombrePaciente"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/nombre_paciente"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edtApellidoPaciente"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/apellido_paciente"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombrePaciente" />

    <EditText
        android:id="@+id/edtTelefonoPaciente"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/telefono_paciente"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidoPaciente" />

    <EditText
        android:id="@+id/edtPrescripcion"
        android:layout_width="270dp"
        android:layout_height="108dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/prescripcion_paciente"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefonoPaciente" />

    <Button
        android:id="@+id/btnRegPaciente"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/primaryBlue"
        android:text="Guardar registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>