<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="8dp"
                android:text="@string/registro_citas"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="8dp"
                android:text="@string/seleccione_paciente"
                android:textColor="@color/black" />

            <ListView
                android:id="@+id/listPacientes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/primaryBlue"
                android:cacheColorHint="@color/black"
                android:listSelector="#6496BD"
                android:textAlignment="center"
                android:textFilterEnabled="false">

            </ListView>

            <EditText
                android:id="@+id/edtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/fecha_cita"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edtPrescripcionMedica"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/prescripcion_paciente"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edtDiagnosticoCita"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Recomendaciones_cita"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/btnRegistrarCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/primaryBlue"
                android:text="@string/registrar_cita" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>